// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBadge matches the compact snapshot 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-full font-medium capitalize transition-colors bg-status-neutral/10 text-status-neutral text-[10px] px-2 py-0.5"
  >
    <span
      class="w-1.5 h-1.5 rounded-full bg-status-neutral"
    />
    Maintenance
  </span>
</DocumentFragment>
`;

exports[`StatusBadge matches the default snapshot 1`] = `
<DocumentFragment>
  <span
    class="inline-flex items-center gap-1.5 rounded-full font-medium capitalize transition-colors bg-status-success/10 text-status-success text-xs px-2.5 py-1"
  >
    <span
      class="w-1.5 h-1.5 rounded-full bg-status-success"
    />
    Ready
  </span>
</DocumentFragment>
`;